course-material/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-app-svc
spec:
  type: ClusterIP
  selector:
    app: images
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
